<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="app_name">loginapp</string>
<string name="hint_email">Email</string>
<string name="hint_password">Password</string>
<string name="hint_name">Fullname</string>
<string name="btn_login">LOGIN</string>
<string name="btn_register">REGISTER</string>
<string name="btn_link_to_register">Not a member? Sign up now.</string>
<string name="btn_link_to_login">Already registred! Login Me.</string>
<string name="welcome">Welcome</string>
<string name="btn_logout">LOGOUT</string>
<string name="btn_upload">UPLOAD</string>
<string name="btn_download">DOWNLOAD</string>
<string name="btn_fav">Favorites</string>
<string name="btn_play">Playlists</string>
<string name="btn_search">Search</string>
<string name="name">Fullname</string>

</resources>